client/src-tauri/check_log.txt
warning: tauri-app@0.1.0: 모델 디렉토리 복사 완료: "C:\\Users\\user.a\\.gemini\\antigravity\\playground\\fiery-horizon\\client\\src-tauri\\target\\debug\\model"
    Checking tauri-app v0.1.0 (C:\Users\user.a\.gemini\antigravity\playground\fiery-horizon\client\src-tauri)
error[E0425]: cannot find function `to_md` in crate `undoc`
 --> src\import\msoffice.rs:8:24
  |
8 |   let content = undoc::to_md(path.as_ref())?;
  |                        ^^^^^ not found in `undoc`

warning: unused import: `self`
  --> src\commands\ai.rs:30:21
   |
30 | use crate::crypto::{self, decrypt_content, encrypt_content}; // Import from crypto
   |                     ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Manager`
  --> src\commands\auth.rs:16:24
   |
16 | use tauri::{AppHandle, Manager, State};
   |                        ^^^^^^^

warning: unused imports: `DocumentRaw` and `self`
  --> src\commands\documents.rs:27:5
   |
27 |     self, delete_document_tags, get_deleted_document_ids, get_document_descendants,
   |     ^^^^
...
31 |     update_document_summary, upsert_document, upsert_revision, DatabaseState, DocumentRaw,
   |                                                                               ^^^^^^^^^^^

warning: unused import: `rusqlite::OptionalExtension`
  --> src\commands\documents.rs:35:5
   |
35 | use rusqlite::OptionalExtension;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `update_chat_title_db`
  --> src\commands\rag.rs:30:31
   |
30 |     update_chat_timestamp_db, update_chat_title_db, DatabaseState,
   |                               ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `OptionalExtension`
  --> src\commands\rag.rs:33:28
   |
33 | use rusqlite::{Connection, OptionalExtension};
   |                            ^^^^^^^^^^^^^^^^^

warning: unused imports: `Aead`, `Aes256Gcm`, and `Nonce`
  --> src\crypto.rs:27:10
   |
27 |   aead::{Aead, KeyInit}, // AEAD 트레이트: 암호화/복호화 인터페이스
   |          ^^^^
28 |   Aes256Gcm,             // AES-256-GCM 암호화 알고리즘
   |   ^^^^^^^^^
29 |   Nonce,                 // 12바이트 논스 (Number used ONCE)
   |   ^^^^^

warning: unused import: `Result as SqliteResult`
 --> src\database\alarm.rs:9:28
  |
9 | use rusqlite::{Connection, Result as SqliteResult};
  |                            ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Result as SqliteResult`
 --> src\database\chat.rs:8:47
  |
8 | use rusqlite::{Connection, OptionalExtension, Result as SqliteResult};
  |                                               ^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `from_read` found for struct `HwpReader` in the current scope
 --> src\import\hwp.rs:8:32
  |
8 |   let hwp = hwpers::HwpReader::from_read(&mut file)?;
  |                                ^^^^^^^^^ function or associated item not found in `HwpReader`

warning: unused import: `KeyInit`
  --> src\crypto.rs:27:16
   |
27 |   aead::{Aead, KeyInit}, // AEAD 트레이트: 암호화/복호화 인터페이스
   |                ^^^^^^^

warning: unused variable: `conn`
   --> src\commands\ai.rs:602:17
    |
602 |     if let Some(ref conn) = db.conn {
    |                 ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_conn`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `creator_name` is never read
   --> src\commands\documents.rs:255:26
    |
255 |   let mut creator_name = None;
    |                          ^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `rows`
   --> src\commands\documents.rs:654:9
    |
654 |     let rows = stmt
    |         ^^^^ help: if this is intentional, prefix it with an underscore: `_rows`

warning: unused variable: `prompt`
   --> src\commands\rag.rs:608:7
    |
608 |   let prompt = format!(
    |       ^^^^^^ help: if this is intentional, prefix it with an underscore: `_prompt`

warning: value assigned to `param_idx` is never read
   --> src\database\documents.rs:182:5
    |
182 |     param_idx += 1; // Not strictly needed as it's the last param
    |     ^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?

Some errors have detailed explanations: E0425, E0599.
For more information about an error, try `rustc --explain E0425`.
warning: `tauri-app` (lib) generated 15 warnings
warning: tauri-app@0.1.0: 모델 디렉토리 복사 완료: "C:\\Users\\user.a\\.gemini\\antigravity\\playground\\fiery-horizon\\client\\src-tauri\\target\\debug\\model"
error: could not compile `tauri-app` (lib) due to 2 previous errors; 15 warnings emitted
